--- a/php54/Dockerfile
+++ b/php54/Dockerfile
@@ -8,7 +8,7 @@ RUN groupadd --system www
 RUN useradd --system --home-dir /var/www -g www --shell /sbin/nologin www
 
 RUN yum update -y
-RUN yum install -y curl wget bsdtar3 htop yum-utils
+RUN yum install -y curl wget bsdtar3 htop yum-utils p7zip
 RUN yum install -y https://cdn.centos.no/remi/enterprise/remi-release-7.rpm
 RUN curl --silent https://openresty.org/package/centos/openresty.repo -o /etc/yum.repos.d/openresty.repo
 
@@ -27,7 +27,11 @@ RUN yum install -y \
         php54-php-mcrypt \
         php54-php-mssql \
         php54-php-odbc \
+        php54-php-pecl-crypto \
+        php54-php-pecl-jsonc \
+        php54-php-pecl-jsond \
         php54-php-pecl-redis \
+        php54-php-pecl-uuid \
         php54-php-xml \
         php54-php-xmlrpc \
         openresty openresty-openssl openresty-pcre openresty-zlib
